--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,16 @@
     </head>
     <body>
         <p>Welcome To The Chat App</p>
+        <script src="/socket.io/socket.io.js"></script>
+        <script>
+            let socket = io();
+            socket.on('connect', () => {
+                console.log('Connected to server');
+            });
+
+            socket.on('disconnect', () => {
+                console.log('Disconnected from server');
+            });
+        </script>
     </body>
 </html>
