--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,7 @@
     <body>
         <p>Welcome To The Chat App</p>
         <script src="/socket.io/socket.io.js"></script>
-        <script>
-            let socket = io();
-            socket.on('connect', () => {
-                console.log('Connected to server');
-            });
-
-            socket.on('disconnect', () => {
-                console.log('Disconnected from server');
-            });
+        <script src="/js/index.js">
         </script>
     </body>
 </html>
