added more socket stuff

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <p>Welcome To The Chat App</p>
+        <h1 id="eee"></h1>
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/index.js">
         </script>
