--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,14 @@
     </head>
     <body>
         <p>Welcome To The Chat App</p>
-        <h1 id="eee"></h1>
+        <ol id="messages"></ol>
+        <form id="message-form">
+            <input name="message" type="text" placeholder="Message"/>
+            <button>Send</button>
+        </form>
+
         <script src="/socket.io/socket.io.js"></script>
+        <script src="/js/libs/jquery-3.3.1.min.js"></script>
         <script src="/js/index.js">
         </script>
     </body>
