--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
             </div>
         </div>
 
-        <script id="message-template" Type="text/template">
+        <script id="message-template" type="text/template">
             <li class="message">
                 <div class="message__title">
                     <h4>{{from}}</h4>
@@ -33,7 +33,7 @@
             </li>
         </script>
 
-        <script id="location-message-template" Type="text/template">
+        <script id="location-message-template" type="text/template">
             <li class="message">
                 <div class="message__title">
                     <h4>{{from}}</h4>
@@ -51,7 +51,6 @@
         <script src="/js/libs/jquery-3.3.1.min.js"></script>
         <script src="/js/libs/moment.js"></script>
         <script src="/js/libs/mustache.js"></script>
-        <script src="/js/index.js">
-        </script>
+        <script src="/js/index.js"></script>
     </body>
 </html>
